# Vulcano

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  StaticAnalyzers.cmake  VcpkgDependencies.cmake
resources/gltf/FlightHelmet/: README.md
resources/shaders/: shader.slang
scripts/: format.sh
src/app/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  FrameResources.cpp  FrameResources.hpp  GLTFModel.cpp  GLTFModel.hpp  Mesh.cpp  Mesh.hpp  ObjModel.cpp  ObjModel.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/engine/utility/: Common.hpp  Globals.hpp  Vertex.hpp
